--- a/preamble/SoM.tex
+++ b/preamble/SoM.tex
@@ -124,7 +124,6 @@
 
 \pgfplotsset{compat=1.16}
 \else
-% Theorem styles (sequential numbering, indexed on chapter (if it exists) or section)
 % PDF-only settings
 % Official UoE brand colours
 \definecolor{UoESoMGrey}{HTML}{c6d1d6}
@@ -134,78 +133,53 @@
 
 \usepackage{mdframed}
 
-% Define styles for mdframed
-% Define styles for mdframed
-\mdfdefinestyle{UoESomStatement}{
-    linecolor=UoESoMDarkOrange,
-    backgroundcolor=UoESoMDarkOrange!3!white,
+% === Hack to fix incorrect spacing before mdframed theorem in TeXLive 2024
+\usepackage{ifpdf}
+\newlength\thmboxoffset
+\ifpdftex
+    \def\gettexliveversion#1(#2 #3 #4#5#6#7#8)#9\relax{#4#5#6#7}
+    \edef\texliveversion{\expandafter\gettexliveversion\pdftexbanner\relax}
+    \ifnum\texliveversion=2024
+      \setlength{\thmboxoffset}{\parskip}
+    \fi
+\fi
+% ===
+
+\mdfsetup{
     leftline=true,
     rightline=true,
     topline=false,
     bottomline=false,
     linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
+    innertopmargin=\dimexpr\thmboxoffset+\parskip\relax,
+    innerbottommargin=0.8\parskip,
     innerrightmargin=1.5ex,
     innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
+    skipabove=1.5\parskip,
+    skipbelow=0.2\parskip,
     leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
+    rightmargin=-2.1ex
+}
+
+% Define styles for mdframed
+\mdfdefinestyle{UoESomStatement}{
+    linecolor=UoESoMDarkOrange,
+    backgroundcolor=UoESoMDarkOrange!3!white
 }
 
 \mdfdefinestyle{UoESomProof}{
     linecolor=UoESoMGrey,
-    backgroundcolor=UoESoMGrey!5!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=1.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
+    backgroundcolor=UoESoMGrey!5!white
 }
 
 \mdfdefinestyle{UoESomDefinition}{
     linecolor=UoESoMLightBlue,
-    backgroundcolor=UoESoMLightBlue!3!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    skipbelow=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
+    backgroundcolor=UoESoMLightBlue!3!white
 }
 
 \mdfdefinestyle{UoESomExample}{
     linecolor=UoESoMDarkBlue,
-    backgroundcolor=UoESoMDarkBlue!3!white,
-    leftline=true,
-    rightline=true,
-    topline=false,
-    bottomline=false,
-    linewidth=0.6ex,
-    innertopmargin=2.5ex,
-    innerbottommargin=1.5ex,
-    innerrightmargin=1.5ex,
-    innerleftmargin=1.5ex,
-    skipabove=\baselineskip,
-    leftmargin=-2.1ex,
-    rightmargin=-2.1ex,
-    %skipbelow=\baselineskip
+    backgroundcolor=UoESoMDarkBlue!3!white
 }
 
 
@@ -231,6 +205,7 @@
 
 \fi
 
+% Theorem styles (sequential numbering, indexed on chapter (if it exists) or section)
 \theoremstyle{definition}
 \ifcsname chapter\endcsname
 \usepackage{titlesec}
