--- a/demo.tex
+++ b/demo.tex
@@ -61,7 +61,7 @@ Theorem~\ref{th:iterError} and its proof will be in the exam:
 
 \begin{theorem}
   \label{th:iterError}
-  Let $\vect{e}_k = \mat{R}^k \vect{e}_0$, for $k\in \mathbb{N}$ and some $\mat{R}\in \R^{n\times n}$. If $\norm{\mat{R}}_p < 1$, then \mbox{$\norm{\vect{e}_k}_p \to 0$} as $k \to \infty$.
+  Let $\vect{e}_k= \mat{R}^k\vect{e}_0$, for $k\in \mathbb{N}$ and some $\mat{R}\in \R^{n\times n}$. If $\norm{\mat{R}}_p < 1$, then \mbox{$\norm{\vect{e}_k}_p \to 0$} as $k \to \infty$. Change
 \end{theorem}
 
 \begin{proof}
