Added second exercise

--- a/week01_worksheet.tex
+++ b/week01_worksheet.tex
@@ -5,3 +5,12 @@
 \begin{solution}
     The solution to the exercise.
 \end{solution}
+
+
+\begin{exercise}
+    A second exercise.
+\end{exercise}
+
+\begin{solution}
+    The solution to the second exercise.
+\end{solution}
