--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \newcommand\coursecode{MATXXXXXXX}
 \newcommand\courseauthor{Author}
 \newcommand\courseyear{2024--25}
+\newcommand\coursedescription{A short description of your worksheet for accessibility metadata.}
 
 \input{preamble/SoM}
 \input{preamble/custom}
