--- a/week01_worksheet.tex
+++ b/week01_worksheet.tex
@@ -1,3 +1,5 @@
+\section{Week 1 worksheet}
+
 \begin{exercise}
     This is an example exercise, question, or problem.
 \end{exercise}
@@ -8,6 +10,15 @@
 
 
 \begin{exercise}
+    A second exercise.
+\end{exercise}
+
+\begin{solution}
+    The solution to the second exercise.
+\end{solution}
+
+
+\begin{exercise}[Custom exercise name]
     A second exercise.
 \end{exercise}
 
