--- a/main.tex
+++ b/main.tex
@@ -1,25 +1,26 @@
 \documentclass[12pt,oneside]{article} 
 
-\newcommand\coursename{Course Name - Worksheet x}
+\newcommand\coursename{Course Name}
 \newcommand\coursecode{MATXXXXXXX}
 \newcommand\courseauthor{Author}
 \newcommand\courseyear{2024--25}
-\newcommand\coursedescription{A short description of your worksheet for accessibility metadata.}
+\newcommand\coursedescription{Worksheet X}
 
 \input{preamble/SoM}
 \input{preamble/custom}
 
 \begin{document}
 
-\maketitle
+
+% Main content goes here
+\input{week01_worksheet.tex}
+
+
 
 % Copyright information (for published pages)
 \iflatexml
     \copyright The University of Edinburgh, 2025. Generated with \href{https://vlmantova.github.io/bookml/}{BookML}.
 \fi
-
-% Main content
-\input{week01_worksheet.tex}
 
 
 \end{document}
