--- a/week01_worksheet.tex
+++ b/week01_worksheet.tex
@@ -1,3 +1,7 @@
+\begin{theorem}
+Dummy theorem
+\end{theorem}
+
 \begin{exercise}
     This is an example exercise, question, or problem.
 \end{exercise}
