--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{article} 
+\documentclass[12pt,oneside]{book} 
 
 \newcommand\coursename{Course Name}
 \newcommand\coursecode{MATXXXXXXX}
