--- a/week01_worksheet.tex
+++ b/week01_worksheet.tex
@@ -1,6 +1,6 @@
-\begin{theorem}
-Dummy theorem
-\end{theorem}
+\begin{definition}
+Dummy definition
+\end{definition}
 
 \begin{exercise}
     This is an example exercise, question, or problem.
