--- a/preamble/custom.tex
+++ b/preamble/custom.tex
@@ -1,1 +1,83 @@
 % Include any further packages/commands/macros/etc in this file.
+
+
+%% Theorem style and settings
+\iflatexml
+\else
+    % PDF-only settings
+    % Official UoE brand colours
+    \definecolor{UoESoMGrey}{HTML}{c6d1d6}
+    \definecolor{UoESoMLightBlue}{HTML}{009baa}
+    \definecolor{UoESoMDarkOrange}{HTML}{c66005}
+    \definecolor{UoESoMDarkBlue}{HTML}{002654}
+
+    \usepackage{mdframed}
+
+    % === Hack to fix incorrect spacing before mdframed theorem in TeXLive 2024
+    \usepackage{ifpdf}
+    \newlength\thmboxoffset
+    \ifpdftex
+        \def\gettexliveversion#1(#2 #3 #4#5#6#7#8)#9\relax{#4#5#6#7}
+        \edef\texliveversion{\expandafter\gettexliveversion\pdftexbanner\relax}
+        \ifnum\texliveversion=2024
+          \setlength{\thmboxoffset}{\parskip}
+        \fi
+    \fi
+    % ===
+
+    \mdfsetup{
+        leftline=true,
+        rightline=true,
+        topline=false,
+        bottomline=false,
+        linewidth=0.6ex,
+        innertopmargin=\dimexpr\thmboxoffset+\parskip\relax,
+        innerbottommargin=0.8\parskip,
+        innerrightmargin=1.5ex,
+        innerleftmargin=1.5ex,
+        skipabove=1.5\parskip,
+        skipbelow=0.2\parskip,
+        leftmargin=-2.1ex,
+        rightmargin=-2.1ex
+    }
+
+    % Define styles for mdframed
+    \mdfdefinestyle{UoESomExercise}{
+        linecolor=UoESoMDarkBlue,
+        backgroundcolor=UoESoMDarkBlue!3!white
+    }
+
+    \mdfdefinestyle{UoESomSolution}{
+        linecolor=UoESoMGrey,
+        backgroundcolor=UoESoMGrey!5!white
+    }
+
+    \surroundwithmdframed[style=UoESomExercise]{exercise}
+    \surroundwithmdframed[style=UoESomProof]{proof}
+
+
+    % PDF headers/footers
+    \pagestyle{fancy}
+    \fancyhf{}
+    \lhead{\coursename}
+    \rhead{\coursecode}
+    \cfoot{\thepage}
+    \setlength{\headheight}{20pt}
+
+
+\fi
+
+% Exercise and solution styles (sequential numbering, indexed on worksheet)
+\theoremstyle{definition}
+\newtheorem{exercise}{Exercise}[section]
+
+\iflatexml  
+    \newenvironment{solution} 
+    {\<details style="text-align: left; width: 100\%" open="">  
+    \<summary>  \textbf{Solution}  \</summary>  \\} 
+    {\</details> } 
+\else 
+    \usepackage{version}  
+    % \excludeversion{solution}  
+    \includeversion{solution}  
+\fi 
