--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,11 @@
-\documentclass[12pt,oneside]{book} 
+\documentclass[12pt,oneside]{book}
 
 \newcommand\coursename{Course Name}
 \newcommand\coursecode{MATXXXXXXX}
 \newcommand\courseauthor{Author}
 \newcommand\courseyear{2024--25}
 \newcommand\weeknumber{1}
-\newcommand\coursedescription{Week \weeknumber worksheet}
+\newcommand\coursedescription{Week \weeknumber{} worksheet}
 
 \input{preamble/SoM}
 \input{preamble/custom}
@@ -14,8 +14,8 @@
 
 
 % Worksheet title (numbering follows week number defined above)
-\setcounter{section}{\weeknumber}
-\section{\coursename --- \coursedescription}
+\setcounter{week}{\weeknumber}
+{\Huge\textbf{\coursename{} --- \coursedescription}}
 
 % Main content goes here
 \input{week01_worksheet.tex}
