--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{book}
+\documentclass[12pt,oneside]{article}
 
 \newcommand\coursename{Course Name}
 \newcommand\coursecode{MATXXXXXXX}
@@ -24,7 +24,7 @@
 
 % Copyright information (for published pages)
 \iflatexml
-    \copyright The University of Edinburgh, 2025. Generated with \href{https://vlmantova.github.io/bookml/}{BookML}.
+    \copyright{} The University of Edinburgh, 2025. Generated with \href{https://vlmantova.github.io/bookml/}{BookML}.
 \fi
 
 
